Fixing IE scrollbar issue.
git-svn-id: http://svn.apache.org/repos/asf/xmlgraphics/site/trunk@1397621 13f79535-47bb-0310-9956-ffa450edef68

--- a/content/css/xmlgraphics.css
+++ b/content/css/xmlgraphics.css
@@ -20,6 +20,7 @@ body {
     font-size: 10pt;
     margin: 0;
     background-color: #efefef;
+    overflow: auto;
 }
 #banner {
     margin-top: 0;
